--- a/src/sample/view/End.fxml
+++ b/src/sample/view/End.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.controller.End"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.End">
+   <children>
+      <Label fx:id="score" layoutX="285.0" layoutY="155.0" text="Label" />
+      <Button fx:id="questionSummary" layoutX="235.0" layoutY="238.0" mnemonicParsing="false" onAction="#goToQuestionSummary" text="Go to Test Summary" />
+   </children>
 </AnchorPane>
