--- a/src/sample/view/QuestionSummary.fxml
+++ b/src/sample/view/QuestionSummary.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.controller.QuestionSummary"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.QuestionSummary">
+   <children>
+      <Label fx:id="question" layoutX="285.0" layoutY="112.0" text="Question" />
+      <Label fx:id="userAnswer" layoutX="285.0" layoutY="168.0" text="Label" />
+      <Label fx:id="correctAnswer" layoutX="285.0" layoutY="229.0" />
+      <Button fx:id="nextQuestion" layoutX="420.0" layoutY="312.0" mnemonicParsing="false" onAction="#nextQuestion" text="Next" />
+      <Button fx:id="goToMenu" layoutX="135.0" layoutY="312.0" mnemonicParsing="false" onAction="#goToMenu" text="Go to Menu" />
+      <Button layoutX="68.0" layoutY="85.0" mnemonicParsing="false" onAction="#endGame" text="End Game" />
+   </children>
 </AnchorPane>
