--- a/src/sample/view/End.fxml
+++ b/src/sample/view/End.fxml
@@ -3,11 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.End">
    <children>
-      <Label fx:id="score" layoutX="285.0" layoutY="155.0" text="Label" />
-      <Button fx:id="questionSummary" layoutX="235.0" layoutY="238.0" mnemonicParsing="false" onAction="#goToQuestionSummary" text="Go to Test Summary" />
+      <Label fx:id="score" alignment="CENTER" layoutX="83.0" layoutY="123.0" prefHeight="21.0" prefWidth="435.0" text="Label">
+         <font>
+            <Font name="Mosk Bold 700" size="18.0" />
+         </font></Label>
+      <Button fx:id="questionSummary" layoutX="235.0" layoutY="233.0" mnemonicParsing="false" onAction="#goToQuestionSummary" text="Go to Test Summary">
+         <font>
+            <Font name="Mosk Medium 500" size="13.0" />
+         </font></Button>
    </children>
 </AnchorPane>
