--- a/src/sample/view/EndOfGame.fxml
+++ b/src/sample/view/EndOfGame.fxml
@@ -3,12 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.EndOfGame">
    <children>
-      <Label layoutX="240.0" layoutY="149.0" text="Thank you for playing!" />
-      <Button layoutX="396.0" layoutY="266.0" mnemonicParsing="false" onAction="#endGame" text="End game" />
-      <Button layoutX="185.0" layoutY="266.0" mnemonicParsing="false" onAction="#goToMenu" text="Go to Menu" />
+      <Label alignment="CENTER" layoutX="153.0" layoutY="192.0" text="Thank you for playing!">
+         <font>
+            <Font name="Mosk Bold 700" size="30.0" />
+         </font></Label>
+      <Button layoutX="469.0" layoutY="46.0" mnemonicParsing="false" onAction="#endGame" text="End game">
+         <font>
+            <Font name="Mosk Medium 500" size="13.0" />
+         </font></Button>
+      <Button layoutX="50.0" layoutY="46.0" mnemonicParsing="false" onAction="#goToMenu" text="Go to Menu">
+         <font>
+            <Font name="Mosk Medium 500" size="13.0" />
+         </font></Button>
    </children>
 </AnchorPane>
