--- a/src/sample/view/QuestionSummary.fxml
+++ b/src/sample/view/QuestionSummary.fxml
@@ -3,14 +3,33 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.QuestionSummary">
    <children>
-      <Label fx:id="question" layoutX="285.0" layoutY="112.0" text="Question" />
-      <Label fx:id="userAnswer" layoutX="285.0" layoutY="168.0" text="Label" />
-      <Label fx:id="correctAnswer" layoutX="285.0" layoutY="229.0" />
-      <Button fx:id="nextQuestion" layoutX="420.0" layoutY="312.0" mnemonicParsing="false" onAction="#nextQuestion" text="Next" />
-      <Button fx:id="goToMenu" layoutX="135.0" layoutY="312.0" mnemonicParsing="false" onAction="#goToMenu" text="Go to Menu" />
-      <Button layoutX="68.0" layoutY="85.0" mnemonicParsing="false" onAction="#endGame" text="End Game" />
+      <Label fx:id="question" alignment="CENTER" layoutX="154.0" layoutY="80.0" prefHeight="29.0" prefWidth="293.0" text="Question">
+         <font>
+            <Font name="Mosk Medium 500" size="24.0" />
+         </font></Label>
+      <Label fx:id="userAnswer" alignment="CENTER" layoutX="146.0" layoutY="147.0" prefHeight="17.0" prefWidth="309.0" text="Label">
+         <font>
+            <Font name="Mosk Medium 500" size="15.0" />
+         </font></Label>
+      <Label fx:id="correctAnswer" alignment="CENTER" layoutX="167.0" layoutY="200.0" prefHeight="17.0" prefWidth="267.0">
+         <font>
+            <Font name="Mosk Medium 500" size="15.0" />
+         </font></Label>
+      <Button fx:id="nextQuestion" layoutX="270.0" layoutY="269.0" mnemonicParsing="false" onAction="#nextQuestion" text="Next">
+         <font>
+            <Font name="Mosk Medium 500" size="18.0" />
+         </font></Button>
+      <Button fx:id="goToMenu" layoutX="41.0" layoutY="53.0" mnemonicParsing="false" onAction="#goToMenu" text="Go to Menu">
+         <font>
+            <Font name="Mosk Medium 500" size="13.0" />
+         </font></Button>
+      <Button layoutX="477.0" layoutY="53.0" mnemonicParsing="false" onAction="#endGame" text="End Game">
+         <font>
+            <Font name="Mosk Medium 500" size="13.0" />
+         </font></Button>
    </children>
 </AnchorPane>
